<resources>
    <string name="login_userName">"User Code"</string>
    <string name="login_password">"PIN"</string>
<string name="ipc_menu_openReferrals">"Open referrals"</string>
<string name="ipc_menu_issueReferral">"Issue referral +"</string>
<string name="common_menu_about">"About"</string>
<string name="common_menu_logOff">"Log Off"</string>
<string name="provider_menu_redeemedLast60Days">"Redeemed last 60 days"</string>
<string name="provider_menu_newRedemption">"New redemption"</string>
<string name="provider_menu_findVoucher">"Find Voucher"</string>
<string name="ipc_openReferralsList_filter_showAllVouchers">"all un-redeemed"</string>
<string name="ipc_openReferralsList_filter_showVouchersWithActions">"un-redeemed pending actions"</string>
<string name="ipc_statistics_rowHeader_Issued">"Issued"</string>
<string name="ipc_statistics_rowHeader_performanceVsTarget">"Issued vs target"</string>
<string name="common_statistics_rowHeader_totalCredit">"Total credit"</string>
<string name="common_statistics_footer_InformationLastCalculated">"Information last calculated"</string>
<string name="common_statistics_footer_Ago">"ago"</string>
<string name="provider_findVoucher_msg_vouchersFound">"Vouchers found"</string>
<string name="provider_findVoucher_result_tableHeader_VoucherCode">"Voucher Code"</string>
<string name="provider_findVoucher_result_tableHeader_clientPhone">"Client Phone"</string>
<string name="provider_findVoucher_result_tableHeader_daysSinceIssue">"Days since issue"</string>
<string name="provider_findVoucher_result_tableHeader_FollowUp">"Follow-up"</string>
<string name="ipc_issueEntry_btn_backHome">"Back"</string>
<string name="common_about_titleText">"About eReferals App"</string>
<string name="common_about_rowHeader_version">"Version"</string>
<string name="common_about_rowHeader_dhisServer">"DHIS server"</string>
<string name="ipc_issueEntry_btn_editEntry">"Edit Issue Referral Entry"</string>
<string name="ipc_referralsRedeemedList_titleText">"Referrals redeemed in the last 60 days"</string>
<string name="ipc_issueEntry_q_firstName">"First name"</string>
<string name="ipc_issueEntry_q_lastName">"Last Name"</string>
<string name="ipc_issueEntry_q_gender">"Gender"</string>
<string name="ipc_issueEntry_q_motherName">"Mother first name"</string>
<string name="ipc_issueEntry_q_birthDistrict">"Birth District"</string>
<string name="ipc_issueEntry_q_yearOfBirth">"Year of Birth"</string>
<string name="ipc_issueEntry_q_numberOfChildren">"# Children"</string>
<string name="ipc_issueEntry_q_currentMethod">"Current method"</string>
<string name="ipc_issueEntry_q_channelOfReferral">"Channel of referral"</string>
<string name="ipc_issueEntry_q_civilStatus">"Civil Status"</string>
<string name="ipc_issueEntry_q_ownershipOfPhone">"Ownership of Phone"</string>
<string name="ipc_issueEntry_q_phoneNumber">"Phone number"</string>
<string name="ipc_issueEntry_q_furtherInformationConsent">"Further phone contact consent"</string>
<string name="ipc_issueEntry_q_program">"Program"</string>
<string name="ipc_issueEntry_btn_issueReferal">"Issue Referal"</string>
<string name="provider_redeemEntry_q_voucher">"Voucher"</string>
<string name="provider_redeemEntry_q_service">"Service"</string>
<string name="session_msg_expired">"User is not logged in or session is expired"</string>
<string name="session_msg_loginAgain">"Please login again"</string>
<string name="session_msg_here">"here"</string>
<string name="ipc_issueEntry_titleText">"Client Details for issuing a referral"</string>
<string name="ipc_issueEntry_msg_processedSuccessfully">"Processed successfully"</string>
<string name="ipc_issueEntry_msg_voucherIssued">"Voucher [voucherNo] issued - Please give this number to client."</string>
<string name="ipc_issueEntry_msg_sendDataFailed">"Send data fail"</string>
<string name="ipc_issueEntry_msg_userLogginWithoutAuthority">"User loggin doesn't have authority on any orgUnit"</string>
<string name="ipc_issueEntry_msg_failedDuringReceivedDataProcessing">"Failed during received data processing"</string>
<string name="ipc_issueEntry_msg_usernameMissing">"Username is missing"</string>
<string name="ipc_issueEntry_msg_passwordMissing">"Password is missing"</string>
<string name="ipc_issueEntry_msg_creatingClient">"Creating the client"</string>
<string name="ipc_issueEntry_msg_clientCUICis">"The client CUIC is"</string>
<string name="ipc_issueEntry_msg_cientCreatedWithId">"The client is created with id"</string>
<string name="ipc_issueEntry_msg_clientCreatedError">"Client created responseCode is not 200, but"</string>
<string name="ipc_issueEntry_msg_bugDetails">"This is the details"</string>
<string name="ipc_issueEntry_msg_enrollingClient">"Enrolling the Client"</string>
<string name="ipc_issueEntry_msg_enrolledClientInProgram">"Enrolled the Client in program"</string>
<string name="ipc_issueEntry_msg_theClient">"The client"</string>
<string name="ipc_issueEntry_msg_enrollProgram">"enroll to program"</string>
<string name="ipc_issueEntry_msg_responseCodeNot200">"responseCode is not 200, but"</string>
<string name="ipc_issueEntry_msg_creatingVoucher">"Creating the voucher"</string>
<string name="ipc_issueEntry_msg_voucherCreatedWithId">"The voucher is created with id"</string>
<string name="ipc_issueEntry_msg_voucherCreateError">"Voucher create responseCode is not 200, but"</string>
<string name="ipc_issueEntry_msg_addClientVoucherRelationship">"Add client/voucher relationship"</string>
<string name="ipc_issueEntry_msg_relationshipAdded">"The relationship is added"</string>
<string name="ipc_issueEntry_msg_voucherClientRelationshipUpdateError">"Voucher client relationship update reponseCode is not 200, but"</string>
<string name="ipc_issueEntry_msg_voucherEnrolledInProgram">"The voucher is enrolled in program"</string>
<string name="ipc_issueEntry_msg_enrollVoucherInProgramError">"Enroll the voucher in the program reponseCode is not 200, but"</string>
<string name="ipc_issueEntry_msg_creatingEventForVoucher">"Creating event for the voucher"</string>
<string name="ipc_issueEntry_msg_voucherEventIsCreatedWithId">"The voucher event is created with id"</string>
<string name="ipc_issueEntry_msg_creatingEventForTheClient">"Creating event for the client"</string>
<string name="ipc_issueEntry_msg_clientEventCreatedWithId">"The client event is created with id"</string>
<string name="ipc_issueEntry_msg_sendingSMSMessageToClientNumber">"Sending SMS Message to Client Number"</string>
<string name="ipc_issueEntry_msg_sentSMSMessageToClient">"Sent the SMS Message to Client"</string>
<string name="ipc_issueEntry_msg_smsPocessMessage">"SMS process message"</string>
<string name="common_menu_statistics">"Statistics"</string>
<string name="common_statistics_rowHeader_referralsRedeemed">"Referrals redeemed"</string>
<string name="provider_findVoucher_titleText">"Find Voucher"</string>
<string name="provider_findVoucher_btn_find">"Find"</string>
<string name="provider_findVoucher_result_btn_back">"Back"</string>
<string name="provider_redeemEntry_titleText">"Details for redeeming a referral"</string>
<string name="provider_redeemEntry_q_program">"Program"</string>
<string name="provider_redeemEntry_btn_redeem">"Redeem"</string>
<string name="provider_redeemEntry_btn_backToSearch">"Back"</string>
<string name="provider_redeemEntry_btn_editRedeemEntry">"Edit Redeem Entry"</string>
<string name="provider_redeemEntry_btn_back">"Back"</string>
<string name="ipc_menu_referralsRedeemed">"Referrals redeemed"</string>
<string name="ipc_openReferralsList_tableHeader_phone">"Phone"</string>
<string name="ipc_openReferralsList_tableHeader_daysSinceIssue">"Days since issue"</string>
<string name="ipc_openReferralsList_tableHeader_followUp">"Follow-up"</string>
<string name="ipc_referralsRedeemedList_tableHeader_client">"Client"</string>
<string name="ipc_referralsRedeemedList_tableHeader_phone">"Phone"</string>
<string name="ipc_referralsRedeemedList_tableHeader_redemptionDate">"Redemption date"</string>
<string name="login_btn_login">"Login"</string>
    <string name="advanced_options">"Advanced Options"</string>
    <string name="simple_options">"Simple Options"</string>
<string name="ipc_issueEntry_msg_voucherEventCreateError">"Voucher event create responseCode not 200, but"</string>
<string name="ipc_issueEntry_msg_clientEventCreateError">"Client event create responseCode not 200, but"</string>
<string name="provider_redeemEntry_msg_startRedeem">"Start redeem"</string>
<string name="provider_redeemEntry_msg_searchingVouchersByCode">"Searching vouchers by code"</string>
<string name="provider_redeemEntry_msg_checkingPasswordCode">"Checking password code"</string>
<string name="provider_redeemEntry_msg_passwordCodeProvided">"Password code provided"</string>
<string name="provider_redeemEntry_msg_matchingPasswordCode">"Matching"</string>
<string name="provider_redeemEntry_msg_matchingPass">"Pass"</string>
<string name="provider_redeemEntry_msg_matchingFailed">"Failed"</string>
<string name="provider_redeemEntry_msg_matchingOk">"Ok"</string>
<string name="provider_redeemEntry_msg_gettingDataVoucher">"Getting data of the voucher"</string>
<string name="provider_redeemEntry_msg_withAllAttributeValuesAndRelationships">"with all attribute values and relationships"</string>
<string name="provider_redeemEntry_msg_eventCreateError">"Event create responseCode is not 200, but"</string>
<string name="provider_redeemEntry_msg_bugDetails">"Details"</string>
<string name="provider_redeemEntry_msg_creatingEventsForTheClient">"Creating events for the client"</string>
<string name="provider_redeemEntry_msg_updatingStatusVoucher">"Updating the status of voucher"</string>
<string name="provider_redeemEntry_msg_voucherStatusUpdateError">"Voucher status update responseCode is not 200, but"</string>
<string name="provider_redeemEntry_msg_creatingVoucherEvents">"Creating Events for the voucher"</string>
<string name="provider_redeemEntry_msg_voucherWithCode">"The Voucher with code"</string>
<string name="provider_redeemEntry_msg_isNotIssueStatus">"is not in ISSUE status"</string>
<string name="provider_redeemEntry_msg_notExists">"does not exists"</string>
<string name="ipc_openReferralsList_titleText">"Referrals that haven't been redeemed"</string>
<string name="common_statistics_titleText">"Statistics"</string>
<string name="provider_findVoucher_q_firstName">"First Name"</string>
<string name="provider_findVoucher_q_lastName">"Surname"</string>
<string name="provider_findVoucher_q_motherName">"Mother first name"</string>
<string name="provider_findVoucher_q_birthDistrict">"District of Birth"</string>
<string name="ipc_issueEntry_msg_processingIssuing">"Processing Issuing"</string>
<string name="provider_redeemList_tableHeader_phone">"Phone"</string>
<string name="provider_redeemList_tableHeader_redemptionDate">"Redemption Date"</string>
<string name="provider_redeemList_tableHeader_serviceProvided">"Service Provided"</string>
<string name="provider_findVoucher_msg_error">"Error occurred during the search"</string>
<string name="provider_redeemEntry_msg_referralRedeemed">"Referral Redeemed"</string>
<string name="provider_redeemEntry_msg_amountCredited">"Amount Credited"</string>
<string name="provider_redeemEntry_msg_fail">"Referral Redeem Failed"</string>
<string name="provider_redeemEntry_msg_processingRedeeming">"Processing Redeeming"</string>
<string name="common_about_rowHeader_language">"Language"</string>
<string name="common_about_rowHeader_currentUser">"Current User"</string>
<string name="common_validation_requiredValue">"Enter data in this field"</string>
<string name="malaria_case_based_reporting">"Connect"</string>
<string name="demo_login">"Demo"</string>
    <string name="forgot_password">"I forgot my PIN"</string>
<string name="action_bar_online">"Online"</string>
<string name="upgrading_metadata">Upgrading metadata</string>
</resources>