<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="@layout/activity_login">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/username_hint"
        style="@style/TextInputLayout">

        <org.eyeseetea.sdk.presentation.views.CustomEditText
            android:id="@+id/edittext_username"
            style="@style/CustomEditText"
            android:hint="@string/login_userName"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_hint"
        style="@style/TextInputLayout"
        android:layout_marginBottom="@dimen/password_bottom_separation">

        <org.eyeseetea.sdk.presentation.views.CustomEditText
            android:id="@+id/edittext_password"
            style="@style/CustomEditText"
            android:hint="@string/login_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <org.eyeseetea.sdk.presentation.views.CustomButton
        android:id="@+id/button_log_in"
        style="@style/CustomButton"
        android:background="@drawable/button_selector_accent"
        android:text="@string/login_btn_login" />
</merge>