<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@android:color/transparent">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingLeft="4dp"
        android:weightSum="1" >

        <org.eyeseetea.sdk.presentation.views.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:text="@string/malaria_case_based_reporting"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <org.eyeseetea.sdk.presentation.views.CustomTextView
            android:id="@+id/action_bar_user"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:text="@string/login_userName"
            android:textSize="16sp"
            android:textColor="@color/white"  />
    </LinearLayout>

    <ImageView
        android:id="@+id/refresh_push"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/action_bar_connection_status"
        android:src="@drawable/push_progress_icon" />

    <org.eyeseetea.sdk.presentation.views.CustomTextView
        android:id="@+id/action_bar_connection_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/action_bar_online"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>