<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary_default"
    android:fillViewport="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:padding="@dimen/layout_content_padding">

        <FrameLayout
            android:id="@+id/layout_dhis_logo"
            android:layout_width="@dimen/logo_img_width"
            android:layout_height="@dimen/logo_img_height"
            android:layout_centerHorizontal="true">

            <org.eyeseetea.sdk.presentation.views.CircleView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:circle_radius="@dimen/circle_radius"
                app:stroke_color="@android:color/white"
                app:stroke_width="6dp" />

            <fr.castorflex.android.circularprogressbar.CircularProgressBar
                android:id="@+id/progress_bar_circular"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:indeterminate="true" />

            <org.eyeseetea.sdk.presentation.views.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text=""
                android:textColor="@android:color/white"
                android:textSize="@dimen/number_text_size"
                app:font_name="@string/normal_font" />

            <include layout="@layout/progress_logo_item"></include>

        </FrameLayout>

        <org.eyeseetea.sdk.presentation.views.CustomTextView
            android:id="@+id/progress_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_dhis_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/upgrading_metadata"
            android:textColor="@android:color/white"
            android:visibility="gone"
            app:font_name="@string/normal_font" />

        <android.support.v7.widget.CardView
            android:id="@+id/layout_login_views"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_dhis_logo"
            android:layout_centerHorizontal="true"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="@dimen/login_container_radius"
            app:cardElevation="@dimen/login_container_elevation"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/login_views_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/login_container_padding">

                <LinearLayout
                    android:id="@+id/login_dynamic_views_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_layout_server_url"
                    style="@style/TextInputLayout"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <org.eyeseetea.sdk.presentation.views.CustomEditText
                        android:id="@+id/edittext_server_url"
                        style="@style/CustomEditText"
                        android:hint="@string/server_url"
                        android:inputType="textUri" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/username_hint"
                    style="@style/TextInputLayout">

                    <org.eyeseetea.sdk.presentation.views.CustomEditText
                        android:id="@+id/edittext_username"
                        style="@style/CustomEditText"
                        android:hint="@string/login_userName"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_hint"
                    style="@style/TextInputLayout"
                    android:layout_marginBottom="@dimen/password_bottom_separation">

                    <org.eyeseetea.sdk.presentation.views.CustomEditText
                        android:id="@+id/edittext_password"
                        style="@style/CustomEditText"
                        android:hint="@string/login_password"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <org.eyeseetea.sdk.presentation.views.CustomButton
                    android:id="@+id/button_log_in"
                    style="@style/CustomButton"
                    android:background="@drawable/button_selector_accent"
                    android:text="@string/login_btn_login" />

                <org.eyeseetea.sdk.presentation.views.CustomButton
                    android:id="@+id/demo_login_button"
                    style="@style/CustomButton"
                    android:layout_marginTop="@dimen/demo_button_margin_top"
                    android:background="@drawable/button_blue_selector"
                    android:orientation="vertical"
                    android:text="@string/demo_login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/login_button_text_size"
                    android:visibility="gone"
                    app:font_name="@string/normal_font"
                    tools:visibility="visible" />

                <org.eyeseetea.sdk.presentation.views.CustomButton
                    android:id="@+id/button_log_out"
                    style="@style/CustomButton"
                    android:background="@drawable/button_selector_red"
                    android:text="@string/clear_and_logout" />

                <org.eyeseetea.sdk.presentation.views.CustomButton
                    android:id="@+id/forgot_password"
                    style="@style/CustomButton.Link"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:text="@string/forgot_password" />

                <org.eyeseetea.sdk.presentation.views.CustomButton
                    android:id="@+id/advanced_options"
                    style="@style/CustomButton.Link"
                    android:text="@string/advanced_options" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</ScrollView>
